# clicky-bunty-server

./: Cargo.toml  README.md  derivation.nix  flake.nix  result  test.py  tests.nix
src/: main.rs  schema.rs  structs.rs
src/database/: mod.rs  models.rs
src/endpoints/: mod.rs  region.rs  station.rs  user.rs
