[package]
name = "clicky-bunty-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
derive_builder = "*"
tungstenite = "0.17"

serde_json = "1.0"
serde = { version = "1.0.101", features = ["derive"] }

csv = "1.1"

chrono = { version = "0.4", features = ["serde"] }

postgres = "*"

tonic = "0.7"

uuid = { version = "0.4", features = ["serde", "v4"] }
regex = "*"

pbkdf2 = "0.10"
rand_core = { version = "0.6", features = ["std"] }
tokio = { version = "1", features = ["full"] }

rand = "0.8"
