[package]
name = "clicky-bunty-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }

# json stuff
derive_builder = "*"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"

# websocket
tungstenite = "0.17"

# database
postgres = "0.19"

# async
tokio = { version = "1.18", features = ["full"] }

# password hashing 
pbkdf2 = "0.10"

# random generator
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8"


uuid = { version = "0.4", features = ["serde", "v4"] }
regex = "*"

